Img overlap fix

--- a/css/partials/devprojects.css
+++ b/css/partials/devprojects.css
@@ -51,6 +51,11 @@
     scale: 0.7;
     padding-bottom: 2em;
 }
+.apiImg{
+    border-radius: 15px;
+    scale: 0.7;
+    padding-bottom: 4em;
+}
 pre code{
     background-color: rgb(110, 110, 110);
     border: 1px solid #BE97C6;
